--- a/html/ui.html
+++ b/html/ui.html
@@ -12,7 +12,7 @@
     <div class="wrapper" style="display: none;">
         <div class="title">Fahrzeugkatalog</div>
         <div class="sortrow">
-            <select name="" id="vehicleCategory">
+            <!-- <select name="" id="vehicleCategory">
                 <option value="all">Alle</option>
                 <option value="motorcycles">Motorrad</option>
                 <option value="coupes">Coupes</option>
@@ -25,7 +25,7 @@
                 <option value="sportsclassics">Klassiker</option>
                 <option value="suvs">SUVs</option>
                 <option value="vans">Vans</option>
-            </select>
+            </select> -->
             <input type="text" placeholder="Fahrzeugname" id="vehicleName">
         </div>
         <div class="vehicleList">
