--- a/html/ui.html
+++ b/html/ui.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>oakyVehicleshop</title>
     <link rel="stylesheet" href="nui://oakyVehicleshop/html/style.css">
     <link rel="stylesheet" href="https://atomicv.de/assets/fontawesome/css/all.css">
 </head>
 <body>
     <div class="wrapper" style="display: none;">
-        <div class="title">Fahrzeugkatalog</div>
+        <div class="title">Vehicle Catalog</div>
         <div class="sortrow">
             <!-- <select name="" id="vehicleCategory">
                 <option value="all">Alle</option>
@@ -26,7 +26,7 @@
                 <option value="suvs">SUVs</option>
                 <option value="vans">Vans</option>
             </select> -->
-            <input type="text" placeholder="Fahrzeugname" id="vehicleName">
+            <input type="text" placeholder="Vehicle name" id="vehicleName">
         </div>
         <div class="vehicleList">
         </div>
